...
        scrollView.addSubview(contentView)

        scrollView.delegate = self
        scrollView.maximumZoomScale = 5
        scrollView.minimumZoomScale = 0.5
        scrollView.contentSize = contentView.bounds.size
        scrollView.accessibilityIdentifier = "circles scroll view"
    }

    func viewForZooming(in scrollView: UIScrollView) -> UIView? {
        contentView
    }

...
