...
        view.addSubview(scrollView)

        scrollView.isPagingEnabled = true
        scrollView.clipsToBounds = false // Show content in unsafe areas on the sides.
        scrollView.showsHorizontalScrollIndicator = false
        scrollView.showsVerticalScrollIndicator = false
        scrollView.accessibilityIdentifier = "paging scroll view"

        for view in views {
            scrollView.addSubview(view)
        }

        updateColours()
...
