...
    }

    override func viewDidLoad() {
        super.viewDidLoad()

        collectionView.delegate = self
        collectionView.accessibilityIdentifier = "list collection view"

        let cellRegistration = UICollectionView.CellRegistration<UICollectionViewListCell, String> { cell, indexPath, stringItem in
            let isHeader = indexPath.item == 0

            cell.contentConfiguration = {
                var config = cell.defaultContentConfiguration()
...
